Merge fallout